--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,7 @@ h3{
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 0 0 3 0
+  padding: 0 0 3 0;
  
   
 
